src/objects/Recurring_Payment_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <inlineHelpText>The organization that makes this payment.</inlineHelpText>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Recurring_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <inlineHelpText>Contact who makes this recurring payment.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Recurring_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>Date that recurring payment is discontinued.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Specify the time between payments by setting both the Frequency and Payment Period fields (e.g. every 2 weeks, every 1 month).</inlineHelpText>
        <label>Frequency</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <formula>IF(OR(ISNULL( End_Date__c ), End_Date__c &gt; TODAY() ), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Notes__c</fullName>
        <label>Payment Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Period__c</fullName>
        <inlineHelpText>Specify the time between payments by setting both the Frequency and Payment Period fields (e.g. every 2 weeks, every 1 month).</inlineHelpText>
        <label>Payment Period</label>
        <picklist>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>Date of first payment.</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <label>Online Transaction ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Paypal Subscription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paypal Recurring Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorize.net Recurring Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Recurring Payment Profile</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Payment_Period__c</columns>
        <columns>Frequency__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive__c</field>
            <operation>notEqual</operation>
            <value>False</value>
        </filters>
        <label>Active Recurring Payments</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Payment_Period__c</columns>
        <columns>Frequency__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Recurring Payments</label>
    </listViews>
    <nameField>
        <label>RPP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Payment Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>